# project-fo-kima

./: .env.docker.example  .gitignore  docker-compose.yml  scratch.rs
app script/: EditKontrakLokasi.html  EditPelanggan.html  Kode.gs  LoadingUiMarkup.html  LoadingUiScript.html  LoadingUiStyles.html  PerpanjangKontrakLokasi.html  TambahKontrakLokasi.html  TambahPelanggan.html  UpgradeKontrakLokasi.html
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: config.rs  main.rs
backend/src/controllers/: lokasi.rs  pelanggan.rs
backend/src/models/: api.rs  lokasi.rs  mod.rs  pelanggan.rs
backend/src/routes/: lokasi.rs  mod.rs  pelanggan.rs
backend/src/services/: google_drive.rs  google_sheets.rs  mod.rs
docs/: ARCHITECTURE_PRD.md  Alur_Bisnis_Kontrak_Lokasi.md  DRAFT_SKEMA_MYSQL_TAHAP_1.md  Dokumentasi_Arsitektur_Website_NextJS.md  KONTRAK_API_TAHAP_1.md  LOCAL_SETUP_DOCKER_MYSQL.md  PRD_Sistem_Monitoring_Spreadsheet.md  Penjelasan_Tab_Data_Billing_Backend.md  Penjelasan_Tab_Kontrak_Lengkap.md  Penjelasan_Tab_Pelanggan.md
frontend/: README.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_components/admin/kontrak/: contract-admin.tsx  contract-form-dialog.tsx  contract-table.tsx  contract-utils.ts  contracts-readonly.tsx  types.ts
frontend/app/_components/admin/pelanggan/: customer-admin.tsx  customer-form-dialog.tsx  (+2 more)
frontend/app/api/contracts/: route.ts
frontend/app/api/customers/: route.ts
frontend/app/api/kontrak-lengkap/: route.ts
frontend/lib/: apps-script.ts  customer-types.ts  rust-backend.ts
(+5 files in other folders)
